Fix search box on iOS

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -92,6 +92,8 @@ code {
   font-weight: 600;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 .ais-SearchBox-input::-webkit-input-placeholder {
   color: #646570;
